use apaches base64 codec library